WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229167
Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError returns true
https://bugs.webkit.org/show_bug.cgi?id=229167
Summary
Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError re...
Alex Christensen
Reported
2021-08-16 15:25:45 PDT
Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError returns true
Attachments
Patch
(8.67 KB, patch)
2021-08-16 15:28 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(9.73 KB, patch)
2021-08-16 15:49 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(9.94 KB, patch)
2021-08-16 15:52 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(11.28 KB, patch)
2021-08-16 17:14 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-08-16 15:28:31 PDT
Created
attachment 435633
[details]
Patch
Alex Christensen
Comment 2
2021-08-16 15:49:15 PDT
Created
attachment 435637
[details]
Patch
Alex Christensen
Comment 3
2021-08-16 15:52:07 PDT
Created
attachment 435638
[details]
Patch
Chris Dumez
Comment 4
2021-08-16 16:28:20 PDT
Comment on
attachment 435638
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435638&action=review
r=me
> Source/WebCore/ChangeLog:10 > + those resources' timing data. This wasn't a problem before
r281110
because we would've discareded it anyways, but
typo: discareded
Alex Christensen
Comment 5
2021-08-16 17:14:22 PDT
Created
attachment 435647
[details]
Patch
EWS
Comment 6
2021-08-16 19:43:15 PDT
Committed
r281125
(
240579@main
): <
https://commits.webkit.org/240579@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435647
[details]
.
Radar WebKit Bug Importer
Comment 7
2021-08-16 19:44:22 PDT
<
rdar://problem/82009989
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug