Report resource timing when SubresourceLoader::checkForHTTPStatusCodeError returns true https://bugs.webkit.org/show_bug.cgi?id=229167

Patch by Alex Christensen <achristensen@webkit.org> on 2021-08-16
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/resource-timing/buffer-full-add-then-clear-expected.txt:
* web-platform-tests/resource-timing/buffer-full-store-and-clear-during-callback-expected.txt:
* web-platform-tests/resource-timing/buffer-full-then-increased-expected.txt:
* web-platform-tests/resource-timing/buffer-full-when-populate-entries-expected.txt:
* web-platform-tests/resource-timing/resource_TAO_cross_origin_redirect_chain-expected.txt:

Source/WebCore:

Since r281110 we report timing data for loads which "fail" because of HTTP status codes in the 400-599 range.
This matches the behavior of Chrome, Firefox, and the spec, but there was a code path where we still weren't reporting
those resources' timing data.  This wasn't a problem before r281110 because we would've discarded it anyways, but
this code path needs to report the timing data before calling SubresourceLoader::cancel.

Covered by several newly passing WPT tests, which Chrome and Firefox already pass.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didReceiveResponse):
(WebCore::SubresourceLoader::checkForHTTPStatusCodeError):

Canonical link: https://commits.webkit.org/240579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281125 268f45cc-cd09-0410-ab3c-d52691b4dbfc